# crimsoncross

./: Cargo.toml  README.md  rustfmt.toml
crates/ast/: Cargo.toml
crates/ast/src/: ciface.rs  cnodes.rs  error.rs  ext.rs  lib.rs  macros.rs  span.rs
crates/ast/src/ciface/: consts.rs  label_idents.rs
crates/ast/src/cnodes/: consts.rs  error.rs  label_idents.rs  labels.rs
crates/ast/src/ctraits/: validate.rs
crates/codegen/: Cargo.toml
crates/codegen/tests/: hello_world.rs
crates/crimson/: Cargo.toml  dist.toml
crates/crimson/src/: main.rs
crates/diag/: Cargo.toml
crates/diag/examples/: sample_diag.rs
crates/diag/src/: diag.rs  lib.rs  report.rs
crates/parse/: Cargo.toml
crates/parse/src/: lib.rs
crates/sema/: Cargo.toml
crates/sema/src/: lib.rs
references/: venom_grammar.txt
src/: main.rs
tools/xtask/: Cargo.toml
