[package]
name = "crimsoncross-compiler"
default-run = "crimson"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "crimson"
path = "./src/lib.rs"

[[bin]]
name = "crimson"
path = "./src/main.rs"
