[package]
name = "crimson-diag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ariadne = "0.5.1"
crimson_ast = { path = "../ast", package = "crimson-ast" }
